Fixed UI overflow and added no collision time on respawn

--- a/Offense_Defense/Client/html/ui.css
+++ b/Offense_Defense/Client/html/ui.css
@@ -1,8 +1,8 @@
-html,
+/* html,
 body {
   height: 100%;
   width: 100%;
-}
+} */
 
 table {
   padding: 10px;
